--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@
             <div class="service-card" onclick="document.querySelector('#deep-dive-2').scrollIntoView({behavior: 'smooth'}); document.querySelector('#deep-dive-2').classList.add('open');">
                 <div class="service-header">
                     <div class="service-number">PHASE 2</div>
-                    <div class="service-title">People Systems</div>
-                    <div class="service-subtitle">Build Complete</div>
+                    <div class="service-title">People Systems Build</div>
+                    <div class="service-subtitle">Complete HR Architecture </div>
                 </div>
                 <div class="service-content">
                     <div class="key-info">
