--- a/index.html
+++ b/index.html
@@ -475,4 +475,4 @@
             </div>
         </div>
 
-        <div class="page-break">──────────────── DETAILED BREAKDOWNS
+        <div class="page-break">
