--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
     <div class="container">
         <div class="intro">
             <h2>Let's Work Together</h2>
-            <p>Choose the engagement that matches your organization's stage and needs. Phase Click any card below for details.</p>
+            <p>Choose the engagement that matches your organization's stage and needs. Click any card below for details.</p>
         </div>
 
         <div class="services">
