--- a/index.html
+++ b/index.html
@@ -567,4 +567,116 @@
                             <span class="roadmap-week">Week 2: 3 Stakeholder "Pulse" Calls</span>
                             <span class="roadmap-desc">30-minute chats with key players (e.g., an Ops lead, a Manager, a new hire).</span>
                             <span class="roadmap-line">One Process Walkthrough: Pick one chaotic workflow (usually Hiring or Performance Reviews) and walk through it with the org leaders live.</span>
-                            <span class="roadmap-
+                            <span class="roadmap-goal">Goal: Identify where the work actually gets stuck and how the team feels.</span>
+                        </div>
+
+                        <div class="roadmap-item">
+                            <span class="roadmap-week">Week 3: Connecting the Dots</span>
+                            <span class="roadmap-desc">Analyze the gap between Week 1 (what is written) and Week 2 (what is happening).</span>
+                            <span class="roadmap-line">Drafting the Plan: Create the 90-Day Stabilization Plan containing the 3-5 "no-regrets" actions.</span>
+                            <span class="roadmap-line">The Leadership Debrief: A 60-90 minute strategy session to present the Chaos Map and the recommended immediate next steps.</span>
+                            <span class="roadmap-goal">Goal: Synthesize findings into the "Chaos Map" and the action plan.</span>
+                        </div>
+
+                    </div>
+                    
+                    <div class="deep-dive-section">
+                        <h4>The Deliverable</h4>
+                        <p>You stop guessing. You get a clear, visual map of your risks and a literal checklist to stabilize the ship.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="deep-dive-2" class="deep-dive">
+            <div class="deep-dive-header" onclick="this.parentElement.classList.toggle('open')">
+                <div class="deep-dive-header-content">
+                    <h3>Phase 2: The People Systems Build</h3>
+                    <p>Turning your values into simple, repeatable systems.</p>
+                </div>
+                <div class="dive-toggle">↓</div>
+            </div>
+            <div class="deep-dive-content">
+                <div class="deep-dive-body">
+                    <div class="deep-dive-section">
+                        <h4>The Philosophy: "Good Enough" Governance</h4>
+                        <p>We do not copy-paste corporate bureaucracy. We build "minimum viable policies" that protect your organization without crushing your soul.</p>
+                    </div>
+                    <div class="deep-dive-section">
+                        <h4>Sample Menu: What We Might Build</h4>
+                        <div class="feature"><strong>Global Remote Work Policy: </strong> Fair compensation and compliance.</div>
+                        <div class="feature"><strong>Safeguarding & Ethics: </strong> Clear reporting lines for investigations.</div>
+                        <div class="feature"><strong>Performance "Lite": </strong> A feedback rhythm without complex forms.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="deep-dive-3" class="deep-dive">
+            <div class="deep-dive-header" onclick="this.parentElement.classList.toggle('open')">
+                <div class="deep-dive-header-content">
+                    <h3>The Fractional Leader Retainer</h3>
+                    <p>A Senior People Partner on your team.</p>
+                </div>
+                <div class="dive-toggle">↓</div>
+            </div>
+            <div class="deep-dive-content">
+                <div class="deep-dive-body">
+                    <div class="deep-dive-section">
+                        <h4>Best For</h4>
+                        <p>Established growing organizations with solid operational foundations that need a senior HR strategist. Also ideal for founders or CEOs who have someone handling HR logistics but want external guidance on complex decisions. This retainer scales with you—light touch when things are stable, more intensive when you're navigating change.</p>
+                    </div>
+                    <div class="deep-dive-section">
+                        <h4>What I Handle</h4>
+                        <div class="feature"><strong>Crisis Management:</strong> Leading sensitive ER investigations.</div>
+                        <div class="feature"><strong>Strategic Sounding Board:</strong> Weekly syncs with the CEO/COO.</div>
+                        <div class="feature"><strong>Oversight:</strong> Guiding your existing Admin/Ops staff.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="about-section">
+            <h3>Why Work With Me</h3>
+            <div class="about-grid">
+                
+                <div class="about-item">
+                    <h4>The Global Edge</h4>
+                    <p>
+                        Most consultants stumble when borders are crossed. I have operationalized people systems across <strong>13+ countries</strong>. I navigate the messy reality of remote teams, cross-border compliance, and cultural nuance so you can hire the best talent anywhere—without the legal risk.
+                    </p>
+                </div>
+
+                <div class="about-item">
+                    <h4>Why Clients Choose Me</h4>
+                    <p>
+                        I bridge the gap between "corporate efficiency" and "non-profit empathy." I don't just write policies; I turn ad-hoc chaos into <strong>self-running systems</strong>. I give you the structure to protect your budget and the culture to keep your soul, freeing you from the day-to-day noise.
+                    </p>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="cta-section">
+            <h2>Ready to stabilize your team?</h2>
+            <p>Let's book a discovery call to identify where your organization is stuck and which phase is right for you.</p>
+            <a href="mailto:danielareinoso@icloud.com" class="cta-button">Book a Discovery Call</a>
+        </div>
+
+    </div>
+
+    <div class="footer">
+        <span class="footer-name">Daniela Reinoso | People & Culture Systems</span>
+        <div class="footer-links">
+            <a href="https://linkedin.com/in/danielareinoso" target="_blank">
+                <svg class="footer-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+                LinkedIn
+            </a>
+            <a href="mailto:danielareinoso@icloud.com">
+                <svg class="footer-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
+                danielareinoso@icloud.com
+            </a>
+        </div>
+    </div>
+</body>
+</html>
