--- a/index.html
+++ b/index.html
@@ -452,8 +452,13 @@
     </style>
 </head>
 <body>
-    <div class="header">
-        <h1>Daniela Reinoso | People & Culture Systems for Mission-driven Orgs</h1>
+  <div class="header">
+        <h1>
+            Daniela Reinoso<br>
+            <span style="display: block; font-size: 0.6em; margin-top: 10px; font-weight: 600; opacity: 0.9;">
+                People & Culture Systems for Mission-driven Orgs
+            </span>
+        </h1>
         <div class="tagline">Turning Chaos Into Calm, Fair, Repeatable Systems</div>
         <p>10+ years building HR systems across 13+ countries.</p>
     </div>
