--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniela Reinoso | People & Culture Systems</title>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2YZQYRTJQ9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2YZQYRTJQ9');
+</script>
+    
     <style>
         * {
             margin: 0;
