--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniela Reinoso | People & Culture Systems</title>
-
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2YZQYRTJQ9"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2YZQYRTJQ9"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -13,8 +10,11 @@
 
   gtag('config', 'G-2YZQYRTJQ9');
 </script>
-    
-    <style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Daniela Reinoso | People & Culture Systems</title>
+
+      <style>
         * {
             margin: 0;
             padding: 0;
