--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <meta property="og:title" content="Fractional HR for Mission-Driven Organizations">
     <meta property="og:description" content="The Chaos-to-Clarity methodology — fair, repeatable people systems without the full-time overhead.">
-    <meta property="og:image" content="https://danielareinosog.github.io/servicesLIbanner.png">
+    <meta property="og:image" content="https://danielareinosog.github.io/services/LIbanner.png">
     <meta property="og:url" content="https://danielareinosog.github.io/services/">
     <meta property="og:type" content="website">
     
