--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         }
 
         .service-card.premium .service-content::before {
-            content: "Premium";
+            content: "Most Popular";
             display: inline-block;
             margin-bottom: 15px;
             padding: 6px 12px;
@@ -745,7 +745,7 @@
             <p>Let's find out if we are a match. Book a free discovery call or shoot me an email.</p>
             <div class="cta-buttons">
                 <a href="https://cal.com/danielareinoso/discovery-call" class="cta-button primary" target="_blank">Book Discovery Call</a>
-                <a href="/cdn-cgi/l/email-protection#e581848b8c80898497808c8b8a968aa58c86898a9081cb868a88" class="cta-button secondary">Email Me</a>
+                <a href="mailto:danielareinoso@icloud.com" class="cta-button secondary">Email Me</a>
             </div>
         </div>
 
@@ -758,6 +758,5 @@
                 <svg class="footer-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
                 LinkedIn
             </a>
-            <a href="/cdn-cgi/l/email-protection#c6a2a7a8afa3aaa7b4a3afa8a9b5a986afa5aaa9b3a2e8a5a9ab">
+            <a href="mailto:danielareinoso@icloud.com">
                 <svg class="footer-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
-      
