--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
             <p>Let's find out if we are a match. Book a free discovery call or shoot me an email.</p>
             <div class="cta-buttons">
                 <a href="https://cal.com/danielareinoso/discovery-call" class="cta-button primary" target="_blank">Book Discovery Call</a>
-                <a href="mailto:danielareinoso@icloud.com" class="cta-button secondary">Email Me</a>
+                <a href="/cdn-cgi/l/email-protection#1074717e79757c716275797e7f637f5079737c7f65743e737f7d" class="cta-button secondary">Email Me</a>
             </div>
         </div>
 
@@ -760,3 +760,5 @@
             </a>
             <a href="mailto:danielareinoso@icloud.com">
                 <svg class="footer-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
+                danielareinoso@icloud.com
+            </a>
