--- a/index.html
+++ b/index.html
@@ -710,9 +710,9 @@
                     </div>
                     <div class="deep-dive-section">
                         <h4>What I Handle</h4>
-                        <div class="feature"><strong>Crisis Management:</strong> Leading sensitive ER investigations.</div>
-                        <div class="feature"><strong>Strategic Sounding Board:</strong> Weekly syncs with the CEO/COO.</div>
-                        <div class="feature"><strong>Oversight:</strong> Guiding your existing Admin/Ops staff.</div>
+                        <div class="feature"><strong>Crisis Management: </strong> Leading sensitive employee relations investigations or conflicts.</div>
+                        <div class="feature"><strong>Strategic Sounding Board: </strong> Weekly syncs with the CEO/COO.</div>
+                        <div class="feature"><strong>Oversight: </strong> Guiding your existing Admin/Ops staff.</div>
                     </div>
                 </div>
             </div>
