--- a/index.html
+++ b/index.html
@@ -686,9 +686,9 @@
                     </div>
                     <div class="deep-dive-section">
                         <h4>Sample Menu: What We Might Build</h4>
-                        <div class="feature"><strong>Global Remote Work Policy:</strong> Fair compensation and compliance.</div>
-                        <div class="feature"><strong>Safeguarding & Ethics:</strong> Clear reporting lines for investigations.</div>
-                        <div class="feature"><strong>Performance "Lite":</strong> A feedback rhythm without complex forms.</div>
+                        <div class="feature"><strong>Global Remote Work Policy</strong>: Fair compensation and compliance.</div>
+                        <div class="feature"><strong>Safeguarding & Ethics </strong>: Clear reporting lines for investigations.</div>
+                        <div class="feature"><strong>Performance "Lite"</strong>: A feedback rhythm without complex forms.</div>
                     </div>
                 </div>
             </div>
@@ -710,9 +710,9 @@
                     </div>
                     <div class="deep-dive-section">
                         <h4>What I Handle</h4>
-                        <div class="feature"><strong>Crisis Management: </strong> Leading sensitive employee relations investigations or conflicts.</div>
-                        <div class="feature"><strong>Strategic Sounding Board: </strong> Weekly syncs with the CEO/COO.</div>
-                        <div class="feature"><strong>Oversight: </strong> Guiding your existing Admin/Ops staff.</div>
+                        <div class="feature"><strong>Crisis Management</strong>: Leading sensitive employee relations investigations or conflicts.</div>
+                        <div class="feature"><strong>Strategic Sounding Board </strong>: Weekly syncs with the CEO/COO.</div>
+                        <div class="feature"><strong>Oversight</strong>: Guiding your existing Admin/Ops staff.</div>
                     </div>
                 </div>
             </div>
@@ -758,7 +758,7 @@
                 <svg class="footer-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
                 LinkedIn
             </a>
-            <a href="mailto:danielareinoso@icloud.com">
+            <a href="mailto:daniela@danielareinoso.co">
                 <svg class="footer-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
-                danielareinoso@icloud.com
+                daniela@danielareinoso.co
             </a>
