--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
 
         <div class="page-break"></div>
 
-        <div id="deep-dive-1" class="deep-dive open">
+        <div id="deep-dive-1" class="deep-dive">
             <div class="deep-dive-header" onclick="this.parentElement.classList.toggle('open')">
                 <div class="deep-dive-header-content">
                     <h3>Phase 1: The Chaos-to-Clarity Scan</h3>
